| Bug #4609 | Views: Delimited column name causes a crash | ||
|---|---|---|---|
| Submitted: | 19 Jul 2004 0:16 | Modified: | 20 Jul 2004 23:22 |
| Reporter: | Trudy Pelzer | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S1 (Critical) |
| Version: | 5.0.1-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[19 Jul 2004 19:02]
Aleksey Kishkin
On slackware 9.0 also. I guess it's independent from linux distribution
[20 Jul 2004 7:49]
Oleksandr Byelkin
ChangeSet 1.1711 04/07/20 08:48:28 bell@sanja.is.com.ua +27 -0 mark subquery in the FROM clause like derived and quoate all identifiers (BUG#4609)
[20 Jul 2004 23:22]
Oleksandr Byelkin
Thank you for bugreport. Bugfix is pushed to our source repository

Description: In ansi mode, if one creates a view (e.g. vt1) based on a single underlying table (e.g. t1) that has one column with a delimited name, the result of a SHOW CREATE VIEW statement is a crash: ERROR 2013 (HY000): Lost connection to MySQL server during query Note: If table t1's column name is not delimited with double quotes, the crash does not occur. How to repeat: set sql_mode = 'ansi'; create table t1 ("a*b" int); create view vt1 as select "a*b" from t1; show create view vt1; ERROR 2013 (HY000): Lost connection to MySQL server during query