mark subquery in the FROM clause like derived and quoate all identifiers (BUG#4609)