sql/item.cc
@@ -418,6 +418,37 @@ const char *Item_ident::full_name() const
   return tmp;
 }
 
+void Item_ident::print(String *str)
+{
+  str->append('`');
+  if (!table_name || !field_name)
+  {
+    str->append(field_name ? field_name : name ? name : "tmp_field");
+    str->append('`');
+    return;
+  }
+  if (db_name && db_name[0])
+  {
+    str->append(db_name);
+    str->append("`.`", 3);
+    str->append(table_name);
+    str->append("`.`", 3);
+    str->append(field_name);
+  }
+  else
+  {
+    if (table_name[0])
+    {
+      str->append(table_name);
+      str->append("`.`", 3);
+      str->append(field_name);
+    }
+    else
+      str->append(field_name);
+  }
+  str->append('`');
+}
+
 /* ARGSUSED */
 String *Item_field::val_str(String *str)
 {
