sql/sql_select.cc
@@ -11250,34 +11250,40 @@ void st_table_list::print(THD *thd, String *str)
   }
   else if (view_name.str)
   {
+    str->append('`');
     str->append(view_db.str, view_db.length);
-    str->append('.');
+    str->append("`.`", 3);
     str->append(view_name.str, view_name.length);
     if (my_strcasecmp(table_alias_charset, view_name.str, alias))
     {
-      str->append(' ');
+      str->append("` `", 3);
       str->append(alias);
     }
+    str->append('`');
   }
   else if (derived)
   {
     str->append('(');
     derived->print(str);
-    str->append(") ", 2);
+    str->append(") `", 3);
     str->append(alias);
+    str->append('`');
   }
   else
   {
+    str->append('`');
     str->append(db);
-    str->append('.');
+    str->append("`.`", 3);
     str->append(real_name);
     if (my_strcasecmp(table_alias_charset, real_name, alias))
     {
-      str->append(' ');
+      str->append("` `", 3);
       str->append(alias);
     }
+    str->append('`');
   }
 }
+
 
 void st_select_lex::print(THD *thd, String *str)
 {
@@ -11285,7 +11291,7 @@ void st_select_lex::print(THD *thd, String *str)
     thd= current_thd;
 
   str->append("select ", 7);
-  
+
   //options
   if (options & SELECT_STRAIGHT_JOIN)
     str->append("straight_join ", 14);
